Add support for untitled posts.

--- a/layout/partial/scripts.pug
+++ b/layout/partial/scripts.pug
@@ -3,5 +3,13 @@ script(async src='//cdn.bootcss.com/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_C
 
 //- Analytics tracking
 if theme.google_analytics
-    script
-        | var _gaq = _gaq || []; _gaq.push(['_setAccount', '#{theme.google_analytics}']); _gaq.push(['_trackPageview']); (function () { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true; ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();
+    script.
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', '#{theme.google_analytics}']);
+        _gaq.push(['_trackPageview']);
+
+        (function () {
+            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
