--- a/layout/mixins/post.pug
+++ b/layout/mixins/post.pug
@@ -2,7 +2,14 @@ mixin postInfo(item)
     .post-info
         != full_date(item.date, 'll')
         if item.from && (is_home() || is_post())
-            a.post-from(href=item.from target="_blank" title=item.from) 翻译 · 原文地址
+            a.post-from(href=item.from target='_blank' title=item.from)
+                != __('translate_original')
+
+mixin postTitle(title)
+    if title
+        != title
+    else
+        != __('untitled')
 
 //- Index Page
 mixin posts()
@@ -11,12 +18,13 @@ mixin posts()
             li.post-list-item
                 article.post-block
                     h2.post-title
-                        a.post-title-link(href= url_for(item.path))
-                            != item.title
+                        a.post-title-link(href=url_for(item.path))
+                            +postTitle(item.title)
                     +postInfo(item)
                     .post-content
                         != item.excerpt
-                    a.read-more(href= url_for(item.path))!= __('more')
+                    a.read-more(href=url_for(item.path))
+                        != __('read_more')
         - })
 
 //- Archive Page
@@ -28,12 +36,13 @@ mixin postList()
             - var itemYear = date(item.date, 'YYYY') - 0;
             - change = year !== itemYear;
             - year = change ? itemYear : year;
-            if change 
-                h2.archive-year!= year
+            if change
+                h2.archive-year
+                    != year
             .post-item
                 +postInfo(item)
-                a.post-title-link(href= url_for(item.path))
-                    != item.title
+                a.post-title-link(href=url_for(item.path))
+                    +postTitle(item.title)
         - })
 
 //- Post Page
@@ -41,7 +50,7 @@ mixin post(item)
     .post
         article.post-block
             h1.post-title
-                != item.title
+                +postTitle(item.title)
             +postInfo(item)
             .post-content
                 != item.content
