--- a/layout/partial/head.pug
+++ b/layout/partial/head.pug
@@ -4,13 +4,12 @@ meta(name='X-UA-Compatible', content='IE=edge')
 title
     block site_title
         = config.title
+
 block description
-    meta(name='description', content= config.description ? config.description : 'A Blog Powered By Hexo')
+    meta(name='description', content=config.description ? config.description : __('meta_description'))
 
 meta(name='viewport', content='width=device-width, initial-scale=1')
+
 link(rel='icon', href=url_for(theme.favicon))
 link(rel='stylesheet', href=url_for('css/theme.css'))
-
-- var xml = config.url + '/atom.xml'
-    link(rel='search', type='application/opensearchdescription+xml', href=xml, title=config.title)
-
+link(rel='search', type='application/opensearchdescription+xml', href=url_for('atom.xml'), title=config.title)
