--- a/layout/post.pug
+++ b/layout/post.pug
@@ -1,11 +1,11 @@
 extends partial/layout.pug
 
 block site_title
-    != page.title + " · " + config.title
+    != page.title + ' | ' + config.title
 
 block description
     - var desc = page.desc || page.title + ' - ' + config.author;
-    meta(name="description", content=desc)
+    meta(name='description', content=desc)
 
 block container
     include mixins/post.pug
