--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -44,11 +44,8 @@ hr {
 }
 
 code {
-    margin: 0 2px;
-    padding: 3px 5px;
-    color: #e96900;
-    border-radius: 2px;
-    white-space: inherit;
+    padding: 0.2em 0.4em;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.125)
 }
 
 iframe, video {
