--- a/layout/partial/copyright.pug
+++ b/layout/partial/copyright.pug
@@ -1,5 +1,9 @@
 .copyright
     - var currentDate = new Date();
-    - var year = currentDate.getFullYear();
-    - year = ! theme.since || year == theme.since ? year : theme.since + ' - ' + year;
-    p &copy; #{year} #[a(href=config.url) #{config.author}], powered by #[a(href='https://hexo.io/', target='_blank') Hexo] and #[a(href=theme.url, target='_blank') #{theme.name}].
+    - var currentYear = currentDate.getFullYear();
+    - var copyrightYear = ! theme.copyright.since || currentYear == theme.copyright.since ? currentYear : theme.copyright.since + ' - ' + currentYear;
+    - var copyrightURL = theme.copyright.url || config.url
+    - var copyrightName = theme.copyright.name || config.author
+    p &copy; #{copyrightYear} #[a(href=copyrightURL) #{copyrightName}].
+        br
+        | Powered by #[a(href='https://hexo.io/', target='_blank') Hexo] &amp; #[a(href=theme.url, target='_blank') #{theme.name}].
