Use date format in main config.

--- a/layout/mixins/post.pug
+++ b/layout/mixins/post.pug
@@ -1,7 +1,7 @@
 mixin postInfo(item)
     .post-info
         a
-        != full_date(item.date, 'YYYY-MM-DD')
+        != full_date(item.date, config.date_format)
         if item.from && (is_home() || is_post())
             a.post-from(href=item.from, target='_blank', title=item.from)
                 != __('translate_original')
