--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -167,7 +167,7 @@ pre {
     }
 }
 
-$signs: ("ini", "conf", "html", "javascript", "js", "bash", "css", "scss","diff", "java", "xml", "python", "json", "swift", "ruby", "perl", "php", "c", "java", "cpp", "ts");
+$signs: ("sql", "ini", "conf", "html", "javascript", "js", "bash", "css", "scss","diff", "java", "xml", "python", "json", "swift", "ruby", "perl", "php", "c", "java", "cpp", "ts");
 @include code-signs($signs);
 
 .highlight.cpp .code:after {
