--- a/layout/partial/scripts.pug
+++ b/layout/partial/scripts.pug
@@ -1,13 +1,14 @@
 //- LaTex
-script(async, src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML', integrity='sha384-Ra6zh6uYMmH5ydwCqqMoykyf1T/+ZcnOQfFPhDrp2kI4OIxadnhsvvA2vv9A7xYv', crossorigin='anonymous')
-script(type='text/x-mathjax-config')
-    | MathJax.Hub.Config({
-    |   tex2jax: {
-    |       inlineMath: [['$','$'],['\\(','\\)']],
-    |       processClass: "mathjax",
-    |       ignoreClass: "no-mathjax"
-    |   }
-    | });
+if theme.mathjax
+    script(async, src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML', integrity='sha384-Ra6zh6uYMmH5ydwCqqMoykyf1T/+ZcnOQfFPhDrp2kI4OIxadnhsvvA2vv9A7xYv', crossorigin='anonymous')
+    script(type='text/x-mathjax-config')
+        | MathJax.Hub.Config({
+        |   tex2jax: {
+        |       inlineMath: [['$','$'],['\\(','\\)']],
+        |       processClass: "mathjax",
+        |       ignoreClass: "no-mathjax"
+        |   }
+        | });
 
 //- Analytics tracking
 if theme.google_analytics
