--- a/source/scss/theme.scss
+++ b/source/scss/theme.scss
@@ -9,6 +9,7 @@
 @import "_partial/footer";
 @import "_partial/mq";
 @import "_partial/copyright";
+@import "_partial/highlight";
 
 @font-face {
     font-family: 'sourcesanspro';
