Add check for comments on page.

--- a/layout/partial/comment.pug
+++ b/layout/partial/comment.pug
@@ -1,4 +1,4 @@
-if theme.disqus
+if theme.disqus && page.comments
     #disqus_thread
     script.
         var disqus_shortname = '#{theme.disqus}';
